NegativeNumAddSubtract/src/sample/score.fxml
<?xml version="1.0" encoding="UTF-8"?>

<?import javafx.scene.control.DialogPane?>
<?import javafx.scene.control.Label?>
<?import javafx.scene.layout.*?>
<DialogPane xmlns:fx="http://javafx.com/fxml" fx:controller="sample.ScoreController">
    <content>
        <GridPane hgap="10" vgap="10">
            <Label fx:id="rightAns" text="Right: " GridPane.rowIndex="0" GridPane.columnIndex="0" />
            <Label fx:id="wrongAns" text="Wrong: " GridPane.rowIndex="1" GridPane.columnIndex="0" />
            <Label fx:id="score" text="Score: " GridPane.rowIndex="2" GridPane.columnIndex="0" />
        </GridPane>
    </content>
</DialogPane>
